--- a/index.html
+++ b/index.html
@@ -253,18 +253,6 @@
                             <p class="team-title">Founder & CEO</p>
                         </div>
                         <div class="team-member-container">
-                            <img class="team-member-img" src="img/team-tuomas.png" alt="team member image">
-                            <div class="name-and-linkedin">
-                                <div class="name-container">
-                                    <p class="person-name">Tuomas Siltala</p>
-                                </div>
-                                <a href="https://www.linkedin.com/in/tuomas-siltala-798b893/" target="_blank">
-                                    <img class="linkedin-icon" src="img/icon-linkedin.png" alt="linkedin icon">
-                                </a>
-                            </div>
-                            <p class="team-title">Co-Founder</p>
-                        </div>
-                        <div class="team-member-container">
                             <img class="team-member-img" src="img/team-junnu.png" alt="team member image">
                             <div class="name-and-linkedin">
                                 <div class="name-container">
@@ -312,6 +300,18 @@
                             </a>
                         </div>
                         <p class="team-title">Lead Developer</p>
+                    </div>
+                    <div class="team-member-container">
+                        <img class="team-member-img" src="img/team-tuomas.png" alt="team member image">
+                        <div class="name-and-linkedin">
+                            <div class="name-container">
+                                <p class="person-name">Tuomas Siltala</p>
+                            </div>
+                            <a href="https://www.linkedin.com/in/tuomas-siltala-798b893/" target="_blank">
+                                <img class="linkedin-icon" src="img/icon-linkedin.png" alt="linkedin icon">
+                            </a>
+                        </div>
+                        <p class="team-title">Senior Advisor</p>
                     </div>
                 </div>
             </div>
