updates likvidi website

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
             <div>
                 <img class="platform-image" src="img/platform-desktop-mobile.png" alt="platform">
             </div>
+            <div class="saas-btns">
+                <a href="https://sumaprotocol.com/" target="_blank" rel="noopener noreferrer">SUMA Website</a>
+                <a href="https://drive.google.com/file/d/1O5bJn9UNyzNCAA9JNWXOANeJnK5nCg1_/view" target="_blank" rel="noopener noreferrer">SUMA Litepaper</a>
+                <a href="https://twitter.com/sumainsider/" target="_blank" rel="noopener noreferrer">SUMA Twitter</a>
+            </div>
         </div>
 
         <div class="net-zero-section">
@@ -185,9 +190,7 @@
                                 <div class="name-container">
                                     <p class="person-name">Ransu Salovaara</p>
                                 </div>
-                                <a href="https://twitter.com/ransu" target="_blank">
-                                    <img class="twitter-icon" src="img/twitter-icon.png" alt="twitter icon">
-                                </a>
+                                
                                 <a href="https://www.linkedin.com/in/ransu/" target="_blank">
                                     <img class="linkedin-icon" src="img/icon-linkedin.png" alt="linkedin icon">
                                 </a>
