--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 empowers businesses to achieve carbon neutrality.
               </p>
               <a href="https://sumaprotocol.com/" target="_blank" rel="noopener noreferrer">
-                <button class="hero-button-1">Go to SUMA</button>
+                <button class="hero-button-1">Learn more about SUMA</button>
               </a>
               
             </div>
